--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -2,6 +2,9 @@
 @import "mixin";
 @import "animate";
 .word_orange{color: #EF7E00;}
+.jc_start{justify-content: flex-start !important;}
+// .d_block{display: block !important;}
+
 .wrap {
 	width: 100%;
 	height: 100%;
@@ -513,9 +516,7 @@
 		margin-bottom: 40px;
 		transition-duration: .3s;
 	}
-	.flyer_item{
-		display: none;
-	}
+
 	.flyer_item.on{
 		display: block;
 	}
@@ -558,6 +559,7 @@
 			border-radius: 10px;
 		}
 		button {
+			display: none;
 			width: 15px;
 			height: 40px;
 			position: absolute;
@@ -589,6 +591,12 @@
 			position: relative;
 			cursor: pointer;
 		}
+		li.on{
+			span{
+				background: rgba(0,0,0,0);
+			}
+			
+		}
 		span{
 			position: absolute;
 			display: block;
@@ -598,9 +606,6 @@
 			left: 0;
 			background: rgba(0,0,0,.7);
 			pointer-events: none;
-			&.on{
-				background: rgba(0,0,0,0);
-			}
 		}
 		img {
 			position: absolute;
@@ -961,22 +966,35 @@
 		padding-left: 15px;
 		padding-right: 15px;
 	}
-	.video_box{
+	&_box{
 		width: 100%;
 		max-width: 990px;
 		height: calc(100% - 80px - 110px);
 		margin: auto;
 	}
-	.video_play{
+	&_group{
+		position: relative;
+		display: flex;
+		transition-duration: .3s;
+		overflow: hidden;
+	}
+	&_item{
+		position: relative;
+		flex: none;
 		width: 100%;
-		height: 557px;
+		padding-bottom: calc(100% * .48);
+	}
+	&_play{
+		position: absolute;
+		width: 100%;
+		height: 100%;
 		background: #eee;
 	}
-	.video_title{
+	&_title{
 		text-align: center;
 		margin-bottom: 25px;
 	}
-	.video_menu{
+	&_menu{
 		position: relative;
 		width: 100%;
 		max-width: 1110px;
@@ -995,8 +1013,14 @@
 			transition-duration: .3s;
 		}
 	}
-	.video_menu_box li+li{
-		margin-left: 15px;
+	.video_menu_box{
+		li{
+			width: 110px;
+			height: 62px;
+		}
+		li+li{
+			margin-left: 15px;
+		}
 	}
 	@include w768px{
 		.video_menu{
