--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -27,6 +27,102 @@
 		background: #FFB057;
 	}
 }
+.scroll_menu{
+	position: relative;
+	width: 100%;
+	max-width: 1100px;
+	height: 110px;
+	background: #FFB057;
+	margin: auto;
+	@include flex_c_c;
+	padding: 0 60px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	@include w1280px{
+		max-width: 700px;
+	}
+	&_box{
+		width: 100%;
+		overflow: hidden;
+		ul{
+			position: relative;
+			display: flex;
+			width: 100%;
+			justify-content: center;
+			transition-duration: .3s;
+		}
+		li{
+			cursor: pointer;
+			position: relative;
+			flex: none;
+			width: 80px;
+			height: 80px;
+			margin: 10px;
+			overflow: hidden;
+			border-radius: 10px;
+			>img {
+				position: absolute;
+				width: 100%;
+				top: 0;
+				bottom: 0;
+				margin: auto;
+			}
+		}
+		li.on{
+			span{
+				background: rgba(0,0,0,0);
+			}
+		}
+		span{
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			background: rgba(0,0,0,.7);
+			pointer-events: none;
+		}
+	}
+
+	&._video{
+		background: #1E8E57;
+		li{
+			width: 110px;
+			height: 62px;
+			margin: 7px;
+			@include w1280px{
+				width: 105px;
+			}
+		}
+		
+		
+	}
+}
+.prev_btn {
+	display: none;
+	width: 15px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	cursor: pointer;
+	left: 20px;
+	background: url('../../images/icon_prev.svg')no-repeat center/cover;
+}
+.next_btn {
+	display: none;
+	width: 15px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	cursor: pointer;
+	right: 20px;
+	background: url('../../images/icon_next.svg')no-repeat center/cover;
+}
 @include w768px{
 	.br_768{
 		display: block;
@@ -538,91 +634,11 @@
 		font-weight: 500px;
 		margin: 0 auto 20px;
 	}
-	.flyer_menu {
-		position: relative;
-		width: 100%;
-		max-width: 1100px;
-		height: 110px;
-		background: #FFB057;
-		margin: auto;
-		@include flex_c_c;
-		padding: 0 60px;
-		border-top-left-radius: 10px;
-		border-top-right-radius: 10px;
-		li {
-			position: relative;
-			flex: none;
-			width: 80px;
-			height: 80px;
-			margin: 10px;
-			overflow: hidden;
-			border-radius: 10px;
-		}
-		button {
-			display: none;
-			width: 15px;
-			height: 40px;
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			margin: auto 0;
-			cursor: pointer;
-		}
-		.flyer_prev {
-			left: 20px;
-			background: url('../../images/icon_prev.svg')no-repeat center/cover;
-		}
-		.flyer_next {
-			right: 20px;
-			background: url('../../images/icon_next.svg')no-repeat center/cover;
-		}
-	}
-	.flyer_menu_box {
-		width: 100%;
-		overflow: hidden;
-		ul{
-			position: relative;
-			display: flex;
-			width: 100%;
-			justify-content: center;
-			transition-duration: .3s;
-		}
-		li{
-			position: relative;
-			cursor: pointer;
-		}
-		li.on{
-			span{
-				background: rgba(0,0,0,0);
-			}
-			
-		}
-		span{
-			position: absolute;
-			display: block;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			background: rgba(0,0,0,.7);
-			pointer-events: none;
-		}
-		img {
-			position: absolute;
-			width: 100%;
-			top: 0;
-			bottom: 0;
-			margin: auto;
-		}
-	}
+
 	.mod_dots{
 		display: none;
 	}
-	@include w1280px{
-		.flyer_menu {
-			max-width: 700px;
-		}
-	}
+
 	@include w768px{
 		.info_box{
 			padding: 25px 0 0 0;
@@ -994,34 +1010,26 @@
 		text-align: center;
 		margin-bottom: 25px;
 	}
-	&_menu{
-		position: relative;
-		width: 100%;
-		max-width: 1110px;
-		height: 110px;
-		background: #1E8E57;
-		margin: auto;
-		@include flex_c_c;
-		padding: 0 65px;
-		border-top-left-radius: 10px;
-		border-top-right-radius: 10px;
-		ul{
-			position: relative;
-			display: flex;
-			width: 100%;
-			justify-content: center;
-			transition-duration: .3s;
-		}
-	}
-	.video_menu_box{
-		li{
-			width: 110px;
-			height: 62px;
-		}
-		li+li{
-			margin-left: 15px;
-		}
-	}
+	// &_menu{
+	// 	position: relative;
+	// 	width: 100%;
+	// 	max-width: 1110px;
+	// 	height: 110px;
+	// 	
+	// 	margin: auto;
+	// 	@include flex_c_c;
+	// 	padding: 0 65px;
+	// 	border-top-left-radius: 10px;
+	// 	border-top-right-radius: 10px;
+	// 	ul{
+	// 		position: relative;
+	// 		display: flex;
+	// 		width: 100%;
+	// 		justify-content: center;
+	// 		transition-duration: .3s;
+	// 	}
+	// }
+
 	@include w768px{
 		.video_menu{
 			display: none;
