--- a/style/css/all.css
+++ b/style/css/all.css
@@ -1192,7 +1192,7 @@
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  background: #ef7e00;
+  background: #EF7E00;
   padding: 25px 30px;
   font-size: 30px;
   font-weight: bold;
