--- a/style/css/all.css
+++ b/style/css/all.css
@@ -850,7 +850,6 @@
 }
 
 .flyer .flyer_group {
-  width: 100%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -907,8 +906,18 @@
     -webkit-box-flex: 0;
         -ms-flex: none;
             flex: none;
-    width: 65%;
-    margin-right: 20px;
+    height: 100%;
+    margin: 0 15px;
+  }
+  .flyer .flyer_item .flyer_pic {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  .flyer .flyer_item.active .flyer_pic {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transition-duration: .3s;
+            transition-duration: .3s;
   }
   .flyer .mod_dots {
     display: -webkit-box;
@@ -917,8 +926,7 @@
     margin-top: 20px;
   }
   .flyer img {
-    width: 100%;
-    height: auto;
+    height: 100%;
   }
 }
 
