--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -608,7 +608,6 @@
 		margin: auto;
 	}
 	.flyer_group {
-		width: 100%;
 		height: 100%;
 		display: flex;
 		margin-bottom: 40px;
@@ -656,16 +655,23 @@
 		.flyer_item{
 			display: block;
 			flex: none;
-			width: 65%;
-			margin-right: 20px;
+			height: 100%;
+			margin: 0 15px;
+
+			.flyer_pic{
+				transform: scale(.9);
+			}
+			&.active .flyer_pic{
+				transform: scale(1);
+				transition-duration: .3s;
+			}
 		}
 		.mod_dots{
 			display: flex;
 			margin-top: 20px;
 		}
 		img{
-			width: 100%;
-			height: auto;
+			height: 100%;
 		}
 	}
 }
