--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -3,7 +3,7 @@
 @import "animate";
 .word_orange{color: $primary_color;}
 .jc_start{justify-content: flex-start !important;}
-
+.unscroll{overflow: hidden;}
 .wrap {
 	width: 100%;
 	height: 100%;
@@ -696,6 +696,7 @@
 		display: flex;
 		width: 100%;
 		padding: 40px 0;
+		transition-duration: .3s;
 		li{
 			flex: 0 0 auto;
 			width: calc(100% / 5 - 60px);
@@ -1361,5 +1362,89 @@
 	@include w1024px{
 		padding: 40px 25px;
 		font-size: 14px;
+	}
+}
+
+.alert_mask{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(0,0,0,.7);
+	z-index: 10;
+	.alert{
+		position: relative;
+		width: 100%;
+		height: 100%;
+		max-width: 1100px;
+		max-height: 824px;
+		background:#fff  url('../../images/bg_news.png')no-repeat right bottom /200%;
+		overflow: hidden;
+		padding: 35px;
+	
+		&_title{
+			text-align: left;
+			font-size: 48px;
+			color:#FFB057;
+			font-weight: bold;
+			margin-bottom: 30px;
+			@include w768px{
+				font-size: 30px;
+			}
+		}
+		&_content{
+			height: calc(100% - 108px);
+			overflow-x: hidden;
+			overflow-y: auto;
+			.msg{
+				font-size: 24px;
+				color: #2C2C2C;
+				line-height: 38px;
+				margin-bottom: 30px;
+				@include w768px{
+					font-size: 20px;
+				}
+			}
+			.pic{
+				width: 60%;
+				@include w768px{
+					width: 100%;
+				}
+			}
+		}
+	}
+	.close{
+		position: absolute;
+		width: 60px;
+		height: 60px;
+		background: #FFB057;
+		top: 20px;
+		right: 35px;
+		@include w768px{
+			width: 45px;
+			height: 45px;
+		}
+		&::before,
+		&::after{
+			content:'';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+			display: block;
+			width: 80%;
+			height: 2px;
+			background: #fff;
+			transform: rotate(45deg);
+		}
+		&::after{
+			transform: rotate(-45deg);
+		}
 	}
 }
